# launch-scaffolder

./: .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  Cargo.toml  EXPLAINME.adoc  Justfile  LICENSE  README.adoc  justfile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
crates/launcher/: Cargo.toml
crates/launcher-common/: Cargo.toml
crates/launcher-common/src/: config.rs  discovery.rs  exceptions.rs  integration.rs  integrity.rs  lib.rs  metadata_block.rs  platform.rs  standard.rs  template.rs
crates/launcher/src/: cmd_config.rs  cmd_mint.rs  cmd_provision.rs  cmd_realign.rs  cmd_standard.rs  main.rs
docs/: branch-protection-remediation-2026-04-10.md  compliance-audit-2026-04-10.md  launcher-exceptions-2026-04-10.md
docs/ruleset-audit-2026-04-10/: README.md  TRANSFER-VERIFICATION-CHECKLIST-2026-04-22.md  audit.sh  forks.txt  reference-ruleset.json  report.jsonl  repos.tsv  transfer-map-2026-04-22.tsv  wave1-apply.sh  wave1-apply.txt  wave1-plan.jsonl  wave1-repos.txt  wave1-results.tsv  wave2-apply.sh  wave2-results.tsv
examples/: README.md  stapeln.launcher.a2ml  stapeln.launcher.fixture.a2ml
standards/: launcher-standard.a2ml
templates/: launcher.sh.tera
